# KotlinPdfium

./: .gitignore  ANNOTATION_USAGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_VERIFICATION_REPORT.md  FORM_DATA_SERIALIZATION_USAGE.md  FORM_FIELDS_USAGE.md  GENERAL_CHECK_AND_TESTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  TASK3_IMPLEMENTATION_SUMMARY.md  TEST_GUIDE.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/androidTest/java/com/hyntix/pdfium/: AnnotationsTest.kt  FormFillTest.kt  InstrumentationTests.kt  SignatureTest.kt  XFATest.kt
src/androidTest/java/com/hyntix/pdfium/utils/: PdfTestDataGenerator.kt  TestUtils.kt
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  pdfium_jni.cpp
src/main/java/com/hyntix/pdfium/: PdfAnnotation.kt  PdfAttachment.kt  PdfBookmark.kt  PdfDocument.kt  PdfLink.kt  PdfPage.kt  PdfSignature.kt  PdfTextPage.kt  PdfiumCore.kt
src/main/java/com/hyntix/pdfium/annotation/: AnnotationAppearance.kt  AnnotationBase.kt  AnnotationColor.kt  AnnotationType.kt  HighlightAnnotation.kt  InkAnnotation.kt  MarkupAnnotation.kt  PdfAnnotation.kt  PdfAnnotationFlags.kt  PdfAnnotationType.kt  StrikeoutAnnotation.kt  UnderlineAnnotation.kt
src/main/java/com/hyntix/pdfium/form/: FormData.kt  FormField.kt  FormFieldType.kt  (+3 more)
src/main/kotlin/: Annotation.kt
(+9 files in other folders)
